# copasi-api

./: .copyright.json  .gitattributes  .gitignore  CMakeLists.txt  README.md  cpsapi-namespace.h
.github/workflows/: cmake.yml
CMakeModules/: FindLIBCOMBINE.cmake  FindLIBCOPASISE.cmake  FindLIBSBML.cmake  FindLIBSEDML.cmake
bindings/: CMakeLists.txt
bindings/common/: downcast_common.cpp  local_common.cpp  patch-wrapper.cmake
bindings/python/: CMakeLists.txt  local.cpp  patch-python.cmake  python.i
bindings/swig/: cpsapi.i  cpsapiCompartment.i  cpsapiContainer.i  cpsapiData.i  cpsapiDataCollector.i  cpsapiDataModel.i  cpsapiEvent.i  cpsapiEventAssignment.i  cpsapiFactory.i  cpsapiGlobalQuantity.i  cpsapiGroup.i  cpsapiKineticLawVariable.i  cpsapiMethod.i  cpsapiModel.i  cpsapiModelEntity.i  cpsapiObject.i  cpsapiObjectData.i  cpsapiParameter.i  cpsapiProblem.i  cpsapiProperty.i  cpsapiReaction.i  cpsapiRoot.i  cpsapiSpecies.i  cpsapiTask.i  cpsapiTransaction.i  cpsapiValue.i  cpsapiVector.i  cpsapiVisitor.i
core/: cpsapiObject.h
cpsapi/: CMakeLists.txt  cpsapiConfig.h.in  cpsapiNamespace.h
cpsapi/CMakeModules/: FindCPSAPI.cmake
cpsapi/core/: CMakeLists.txt  cpsapiContainer.cpp  cpsapiContainer.h  cpsapiData.cpp  cpsapiData.h  cpsapiDataCollector.cpp  cpsapiDataCollector.h  cpsapiDataModel.cpp  cpsapiDataModel.h  cpsapiFactory.cpp  cpsapiFactory.h  cpsapiGroup.cpp  cpsapiGroup.h  cpsapiObject.cpp  cpsapiObject.h  cpsapiObjectData.cpp  cpsapiObjectData.h  cpsapiParameter.cpp  cpsapiParameter.h  cpsapiPointer.cpp  cpsapiPointer.h  cpsapiProperty.cpp  cpsapiProperty.h  cpsapiRoot.cpp  cpsapiRoot.h  cpsapiTransaction.cpp  cpsapiTransaction.h  cpsapiValue.cpp  cpsapiValue.h  cpsapiVariant.cpp  cpsapiVariant.h  cpsapiVector.h  cpsapiVisitor.h  cpsapiVisitor.hpp
cpsapi/model/: CMakeLists.txt  cpsapiCompartment.cpp  cpsapiCompartment.h  cpsapiEvent.cpp  cpsapiEvent.h  cpsapiEventAssignment.cpp  cpsapiEventAssignment.h  cpsapiGlobalQuantity.cpp  cpsapiGlobalQuantity.h  cpsapiKineticLawVariable.cpp  cpsapiKineticLawVariable.h  cpsapiModel.cpp  cpsapiModel.h  cpsapiModelEntity.cpp  cpsapiModelEntity.h  cpsapiReaction.cpp  cpsapiReaction.h  cpsapiReactionParameter.cpp  cpsapiReactionParameter.h  cpsapiSpecies.cpp  cpsapiSpecies.h  cpsapiTransaction.cpp  cpsapiTransaction.h
cpsapi/task/: CMakeLists.txt  cpsapiMethod.cpp  cpsapiMethod.h  cpsapiProblem.cpp  cpsapiProblem.h  cpsapiTask.cpp  cpsapiTask.h
cpsapi/templates/: object.cpp  object.h
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  index.rst
docs/examples/: examples.rst
docs/quickstart/: get-started.rst
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
examples/visitor/: CMakeLists.txt  Visitor.cpp  Visitor.h
src/core/: cpsapiContainer.h  cpsapiObject.h
tests/: CMakeLists.txt  TestCore.cpp  TestModelEditing.cpp  TestRunner.cpp  catch.hpp  reaction.cpp
